2012-06-16      Stephan Linz <linz@li-pro.net>

	* common: initial version Avnet-S6LX150T-AXI-full-13.4
