@@ -1,41 +1,3 @@
-______________________________________________________________________________
-
- K N O W N   I S S U E S
-=========================
-
-(1) DTS: MBRef-TPOS doesn't generate correct PHY parameters. Fix to:
-
-	phy0: phy@1 {
-		compatible = "natsemi,dp83865";
-		device_type = "ethernet-phy";
-		reg = <1>;
-	};
-
-(2) DTS: MBRef-TPOS doesn't generate I2C bus infrastructure. Fix to:
-
-	axi_iic_0: i2c@80ef0000 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		compatible = "xlnx,axi-iic-1.01.b", "xlnx,xps-iic-2.00.a";
-		interrupt-parent = <&axi_intc_0>;
-		interrupts = < 5 2 >;
-		reg = < 0x80ef0000 0x10000 >;
-		xlnx,family = "spartan6";
-		xlnx,gpo-width = <0x1>;
-		xlnx,iic-freq = <0x186a0>;
-		xlnx,scl-inertial-delay = <0x0>;
-		xlnx,sda-inertial-delay = <0x0>;
-		xlnx,sda-level = <0x1>;
-		xlnx,ten-bit-adr = <0x0>;
-		rtc0: rtc@68 {
-			compatible = "dallas,ds3232";
-			reg = <0x68>;
-			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 1 1 >;
-		};
-	} ;
-______________________________________________________________________________
-
 OF FDT:
   - copy all files from microblaze_#/libsrc/device-tree_v#_##_# to here:
 	xilinx.dts
