@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.4 EDK_O.87xd
-# Today is: Saturday, the 16 of June, 2012; 12:04:25
+# Today is: Sunday, the 29 of July, 2012; 14:55:07
 #
 # Description: U-Boot Configurations
 #
@@ -40,6 +40,8 @@ PLATFORM_CPPFLAGS += -mcpu=v8.20.b
 
 # Automatic U-Boot position at 0x27e00000
 CONFIG_SYS_TEXT_BASE = 0x27e00000
+
+# SPI controller not defined
 
 # Sysace CF controller not defined
 
