@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.4 EDK_O.87xd
- * Today is: Saturday, the 16 of June, 2012; 12:04:26
+ * Today is: Sunday, the 29 of July, 2012; 14:55:08
  *
  * XPS project directory: Avnet-S6LX150T-AXI-full-13.4
  */
@@ -190,7 +190,7 @@
 			device_type = "network";
 			interrupt-parent = <&axi_intc_0>;
 			interrupts = < 4 2 >;
-			local-mac-address = [ 00 0a 35 2a 60 00 ];
+			local-mac-address = [ 00 0a 35 ac 10 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x88f00000 0x40000 >;
 			xlnx,avb = <0x0>;
@@ -303,12 +303,13 @@
 			xlnx,sda-inertial-delay = <0x0>;
 			xlnx,sda-level = <0x1>;
 			xlnx,ten-bit-adr = <0x0>;
-			rtc0: rtc@68 {
+			rtc0: axi-iic@68 {
 				compatible = "dallas,ds3232";
-				reg = <0x68>;
+				device_type = "rtc";
 				interrupt-parent = <&axi_intc_0>;
 				interrupts = < 1 1 >;
-			};
+				reg = < 0x68 >;
+			} ;
 		} ;
 		axi_intc_0: interrupt-controller@8aff0000 {
 			#interrupt-cells = <0x2>;
