@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.4 EDK_O.87xd
- * Today is: Saturday, the 16 of June, 2012; 12:04:25
+ * Today is: Sunday, the 29 of July, 2012; 14:55:07
  *
  * Description: U-Boot Configurations
  *
@@ -80,6 +80,8 @@
 #define XILINX_IIC_0_BASEADDR                    0x80ef0000
 #define XILINX_IIC_0_FREQ                        100000
 #define XILINX_IIC_0_BIT                         0
+
+/* SPI controller not defined */
 
 /* GPIO controller is axi_gpio_3 */
 #define XILINX_GPIO_BASEADDR                     0x80fc0000
